Fix overflow for large topic names Fixes https://github.com/r-universe-org/help/issues/328

--- a/dashboard.css
+++ b/dashboard.css
@@ -172,6 +172,7 @@ body {
 
 .manpages-table td {
   border-color: #eeeeee;
+  word-break: break-word;
 }
 
 /* Below is copied from bootstrap material design theme */
